--- a/data/blog/2021-11-10-Explore-Data-Center-Carbon-Credit-Protocol.mdx
+++ b/data/blog/2021-11-10-Explore-Data-Center-Carbon-Credit-Protocol.mdx
@@ -4,7 +4,7 @@ date: '2021-11-10'
 tags: ['Meson Labs', 'Data Center', 'DCCC']
 draft: false
 summary: We propose establishing an agreement on carbon emissions trading in the data center dimension, introducing indicators such as PUE, utilization rate, and power supply structure, and using DCCC to make specific measurements.
-images: ['https://raw.githubusercontent.com/daqnext/DCCC/main/assets/05.png']
+images: ['/static/images/dccc/05.png']
 layout: PostLayout
 readTime: '15 minutes read'
 ---
