--- a/data/blog/2022-04-19-Meson-Network-2022.mdx
+++ b/data/blog/2022-04-19-Meson-Network-2022.mdx
@@ -4,7 +4,7 @@ date: '2022-04-19'
 tags: ['Meson', 'Web3']
 draft: false
 summary: We expect to launch the first mainnet version of Meson Network on Ethereum. Users can start trading bandwidth resources on Meson upon our launch.
-images: ['https://raw.githubusercontent.com/bitruss/img/main/2022/202205271055248.jpeg']
+images: ['/static/images/meson-2022/202205271055248.jpeg']
 layout: PostLayout
 readTime: '5 minutes read'
 ---
