update Meson Gateway X

--- a/data/blog/2023-04-06-meson-gateway-x.mdx
+++ b/data/blog/2023-04-06-meson-gateway-x.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Meson Gateway X: Paving the Way for Mass Adoption of Web3 Infrastructure'
-date: '2022-12-07'
-tags: ['Meson Labs', 'Gateway X', 'Web3']
+date: '2023-04-06'
+tags: ['Meson Labs', 'Gateway X', 'Meson Cloud']
 draft: false
 summary: Gateway X integrates internet cloud services, providing users with exclusive facilities for uploading and sharing Web3 storage.
 images: ['/static/images/meson-gateway-x/traffic-congestion.png']
