add Meson Gateway X (#12)
* delete blog

* add Meson Gateway X

* update Meson Gateway X

--- a/data/blog/2022-12-07-Tokenomics-Beta1.mdx
+++ b/data/blog/2022-12-07-Tokenomics-Beta1.mdx
@@ -39,7 +39,7 @@ For the first approach, we can look at a platform like Uber. The passenger pays 
 
 The method we adopt is based on the Burn & Mint mechanism, combined with the characteristics of the Tips from ETH2.0. For the demand side, users' basic fees are denominated in stablecoins, and the system calculates fees in real-time. Users can use a variety of tokens to pay, and this part of the fee will be converted into Meson Token and destroyed to generate equivalent Meson Credit. Meson Credit and USD have a fixed conversion ratio. Users can get a 5% discount if they pay with Meson Credit directly. At the same time, users can also choose to pay a certain amount of Tips in exchange for more benefits from the service provider (e.g., higher processing priority, longer cache time, etc.), and the Tips are paid directly to the nodes hosting the service.
 
-![EX-M1](https://pz-tpsfpq.meson.network/ipfs/bafybeigum6d7cizxhz6yj3lndkonhgpwmzzb3p5pcurm5dabrue3t5utm4/ex-m1.jpeg)
+![EX-M1](/static/images/tokenomics-beta1/ex-m1.jpeg)
 
 ### How to decouple the supply side with native token
 
