--- a/data/blog/2023-04-06-meson-gateway-x.mdx
+++ b/data/blog/2023-04-06-meson-gateway-x.mdx
@@ -17,7 +17,7 @@ Gateway X integrates internet cloud services, providing users with exclusive fac
 
 ## Why we build gateway X
 
-Meson, as a bandwidth market service, provides Gateway acceleration services (aka CDN) for Web3 storage facilities. However, in our practice, we often find issues with the origin of the services. Let's take the two major mainstream Web3 storage systems as examples. For IPFS, the gateway is ipfs.io. When users configure ipfs.io as the source on the Meson side, Meson is abstracted as a cache layer, which to some extent alleviates the direct request pressure on the source gateway. However, the fundamental issue lies in the imbalance of supply and demand for a single gateway.
+Meson, serving as a bandwidth market service, offers Gateway acceleration services (also known as CDN) for Web3 storage infrastructures. However, in our experience, we often encounter challenges with the service origins. Let's examine the two primary mainstream Web3 storage systems as examples. For IPFS, the gateway is ipfs.io. When users configure ipfs.io as the source in Meson, it acts as a cache layer, which somewhat reduces the direct request pressure on the source gateway. Nevertheless, the core problem stems from the supply and demand imbalance of a single gateway.
 
 This situation is like the traffic problem on a highway. There is only one route to deliver goods to IPFS city (ipfs.io). No matter how much the road is widened, congestion will always occur when the demand for goods increases. Meson, on the other hand, is like building numerous satellite cities around the world. Users don't have to take the ipfs.io highway; they can directly go to Meson's satellite cities to collect goods. The satellite city plan can fundamentally solve the problem, but there are some risks in the early stages. As most users still go to the IPFS main city to collect goods, and Meson's satellite cities also need to take the ipfs.io highway to collect goods from the main city, Meson's trucks eventually get stuck in traffic along with everyone else, leading to occasional shortages in satellite cities. In reality, when using the ipfs.io gateway, issues like 502 errors occur more than once, indicating that the service is not highly available.
 
