--- a/data/blog/2023-04-06-meson-gateway-x.mdx
+++ b/data/blog/2023-04-06-meson-gateway-x.mdx
@@ -13,13 +13,13 @@ From [Meson Labs](https://blog.meson.network/)
 
 ## TL;DR
 
-Gateway X integrates internet cloud services, providing users with exclusive facilities for uploading and sharing Web3 storage. Additionally, Gateway X supports users connecting their local storage devices to the network, making nearly unlimited low-cost storage usage a possibility.
+Gateway X integrates internet cloud services, providing users with exclusive facilities for uploading and sharing Web3 storage. Additionally, Gateway X supports users connect their local storage devices to the network, making nearly unlimited low-cost storage usage a possibility.
 
 ## Why we build gateway X
 
-Meson Network, serving as a bandwidth market service, offers Gateway acceleration services (also known as CDN) for Web3 storage infrastructures. However, in our experience, we often encounter challenges with the service origins. Let's examine the two primary mainstream Web3 storage systems as examples. For IPFS, the gateway is ipfs.io. When users configure ipfs.io as the source in Meson, it acts as a cache layer, which somewhat reduces the direct request pressure on the source gateway. Nevertheless, the core problem stems from the supply and demand imbalance of a single gateway.
+Meson Network, a bandwidth marketplace, offers Gateway acceleration services (also known as CDN) for Web3 storage infrastructures. However, in our experience, we often encounter challenges with the service origins. Let's examine the two primary mainstream Web3 storage systems as examples. For IPFS, the gateway is ipfs.io. When users configure ipfs.io as the source in Meson, it acts as a cache layer, which somewhat reduces the direct request pressure on the source gateway. Nevertheless, the core problem stems from the supply and demand imbalance of a single gateway.
 
-This situation is like the traffic problem on a highway. There is only one route to deliver goods to IPFS city (ipfs.io). No matter how much the road is widened, congestion will always occur when the demand for goods increases. Meson, on the other hand, is like building numerous satellite cities around the world. Users don't have to take the ipfs.io highway; they can directly go to Meson's satellite cities to collect goods. The satellite city plan can fundamentally solve the problem, but there are some risks in the early stages. As most users still go to the IPFS main city to collect goods, and Meson's satellite cities also need to take the ipfs.io highway to collect goods from the main city, Meson's trucks eventually get stuck in traffic along with everyone else, leading to occasional shortages in satellite cities. In reality, when using the ipfs.io gateway, issues like 502 errors occur more than once, indicating that the service is not highly available.
+This situation is like the traffic problem on a highway. There is only one route to deliver goods to IPFS city (ipfs.io). No matter how much the road is widened, congestion will occur when the demand for goods increases. Meson, on the other hand, is like building numerous satellite cities around the world. Users don't have to take the ipfs.io highway; they can directly go to Meson's satellite cities to collect goods. The satellite city plan can fundamentally solve the problem, but there are some risks in the early stages. As most users still go to the IPFS main city to collect goods, and Meson's satellite cities also need to take the ipfs.io highway to collect goods from the main city, Meson's trucks eventually get stuck in traffic along with everyone else, leading to occasional shortages in satellite cities. In reality, when using the ipfs.io gateway, issues like 502 errors occur more than once, indicating that the service is not highly available.
 
 ![EX-M1](/static/images/meson-gateway-x/traffic-congestion.png)
 
@@ -29,7 +29,7 @@ In comparison, IPFS's main city is self-controlled and boasts extraordinary proc
 
 Alright, now that we understand the architecture and challenges, let's see how Meson tackles them.
 
-Fortunately, today's excellent cloud infrastructure makes it relatively easier to lay a virtual line on the internet compared to building a physical highway. One of the core advantages of cloud services is their standardized nature and provision of standard access methods. At Meson, we've integrated existing cloud services and offer mirror deployment services for storage facilities. Users can effortlessly deploy their own IPFS gateway and Arweave node, using their facilities for storage uploading and sharing while storing only their files, significantly reducing costs.
+Fortunately, today's excellent cloud infrastructure makes it relatively easier to lay a virtual line on the internet compared to building a physical highway. One of the core advantages of cloud services is their standardized nature and provision of standard access methods. At Meson, we've integrated existing cloud services and offer mirror deployment services for storage facilities. By deploying their own IPFS gateway and Arweave node, users can easily use their own storage facilities for uploading and sharing files, and store only their own files, resulting in significant cost savings.
 
 This is akin to the past, where constructing a main city had a high entry barrier, achievable only by a select few professionals. With Gateway X at Meson, we provide a one-click main city construction feature, dramatically lowering the barrier and enabling even ordinary individuals without an engineering background to choose a piece of land and deploy a main city. There are several apparent benefits to deploying main cities in this manner:
 
