--- a/data/blog/2022-12-07-Tokenomics-Beta1.mdx
+++ b/data/blog/2022-12-07-Tokenomics-Beta1.mdx
@@ -6,7 +6,7 @@ draft: false
 summary: We are ready to release the Tokenomics-Beta1 and apply it on the Meson Testnet.
 images: ['/static/images/tokenomics-beta1/ex-m1.jpeg']
 layout: PostLayout
-readTime: '13 minutes read'
+authors: ['meson-labs']
 ---
 
 From [Meson Labs](https://meson.network/)
