--- a/data/blog/2023-04-06-meson-gateway-x.mdx
+++ b/data/blog/2023-04-06-meson-gateway-x.mdx
@@ -6,7 +6,7 @@ draft: false
 summary: Gateway X integrates internet cloud services, providing users with exclusive facilities for uploading and sharing Web3 storage.
 images: ['/static/images/meson-gateway-x/traffic-congestion.png']
 layout: PostLayout
-readTime: '8 minutes read'
+authors: ['meson-labs']
 ---
 
 From [Meson Labs](https://blog.meson.network/)
