Remove commented part

--- a/data/blog/2023-04-06-meson-gateway-x.mdx
+++ b/data/blog/2023-04-06-meson-gateway-x.mdx
@@ -3,7 +3,7 @@ title: 'Gateway X: Paving the Way for Mass Adoption of Web3 Infrastructure'
 date: '2023-04-06'
 tags: ['Meson Labs', 'Gateway X', 'Meson Cloud']
 draft: false
-summary: Gateway X integrates internet cloud services, providing users with exclusive facilities for uploading and sharing Web3 storage.
+summary: Gateway X integrates internet cloud services, providing users with exclusive facilities for uploading and sharing Web3 storage. Additionally, Gateway X supports users connect their local storage devices to the network, making nearly unlimited low-cost storage usage a possibility.
 images: ['/static/images/meson-gateway-x/traffic-congestion.png']
 layout: PostLayout
 authors: ['meson-labs']
