--- a/data/blog/2021-11-10-Explore-Data-Center-Carbon-Credit-Protocol.mdx
+++ b/data/blog/2021-11-10-Explore-Data-Center-Carbon-Credit-Protocol.mdx
@@ -8,6 +8,7 @@ images: ['/static/images/dccc/05.png']
 layout: PostLayout
 readTime: '15 minutes read'
 authors: ['meson-labs']
+departments: 'Meson Labs'
 ---
 
 From [Meson Labs](https://meson.network/)
