--- a/data/blog/2022-04-19-Meson-Network-2022.mdx
+++ b/data/blog/2022-04-19-Meson-Network-2022.mdx
@@ -7,6 +7,7 @@ summary: We expect to launch the first mainnet version of Meson Network on Ether
 images: ['/static/images/meson-2022/202205271055248.jpeg']
 layout: PostLayout
 authors: ['default']
+departments: 'Meson Network'
 ---
 
 ![](https://raw.githubusercontent.com/bitruss/img/main/2022/202205271055248.jpeg)
