--- a/data/blog/2023-04-06-meson-gateway-x.mdx
+++ b/data/blog/2023-04-06-meson-gateway-x.mdx
@@ -7,6 +7,7 @@ summary: Gateway X integrates internet cloud services, providing users with excl
 images: ['/static/images/meson-gateway-x/traffic-congestion.png']
 layout: PostLayout
 authors: ['meson-labs']
+departments: 'Meson Labs'
 ---
 
 From [Meson Labs](https://blog.meson.network/)
