--- a/data/blog/2022-12-07-Tokenomics-Beta1.mdx
+++ b/data/blog/2022-12-07-Tokenomics-Beta1.mdx
@@ -7,6 +7,7 @@ summary: We are ready to release the Tokenomics-Beta1 and apply it on the Meson 
 images: ['/static/images/tokenomics-beta1/ex-m1.jpeg']
 layout: PostLayout
 authors: ['meson-labs']
+departments: 'Meson Labs'
 ---
 
 From [Meson Labs](https://meson.network/)
