--- a/data/blog/2023-07-12-Meson-Vector-Plan.mdx
+++ b/data/blog/2023-07-12-Meson-Vector-Plan.mdx
@@ -6,6 +6,7 @@ draft: false
 summary: Establish a Nasdaq-like platform for bandwidth infrastructure - the Meson Exchange. The Vector Plan aligns with Meson Network's objective of transitioning from a closed, manual contract-driven market to one governed by the protocol through its contributors and participants.
 layout: PostLayout
 authors: ['sherlock', 'jonathan']
+departments: 'Sherlock Shi, Jonathan Han'
 ---
 
 Many of you may know Meson Network for offering a decentralized content delivery network (CDN) service for Web3 users for the last couple of years. However, this is only a part of Meson's Vector Plan, which is to establish a Nasdaq-like platform for bandwidth infrastructure - the **Meson Exchange**. The Vector Plan aligns with Meson Network's objective of transitioning from a closed, manual contract-driven market to one governed by the protocol through its contributors and participants.
