--- a/data/blog/2023-07-12-Meson-Vector-Plan.mdx
+++ b/data/blog/2023-07-12-Meson-Vector-Plan.mdx
@@ -4,6 +4,7 @@ date: '2023-07-12'
 tags: ['Bandwidth Exchange', 'Vector Meson']
 draft: false
 summary: Establish a Nasdaq-like platform for bandwidth infrastructure - the Meson Exchange. The Vector Plan aligns with Meson Network's objective of transitioning from a closed, manual contract-driven market to one governed by the protocol through its contributors and participants.
+images: ['/static/images/meson-vector-plan/meson-vector-plan-image.jpeg']
 layout: PostLayout
 authors: ['sherlock', 'jonathan']
 departments: 'Sherlock Shi, Jonathan Han'
