--- a/data/blog/2023-07-27-gateway-x-its-role-in-the-meson-cloud-a-deeper-dive.mdx
+++ b/data/blog/2023-07-27-gateway-x-its-role-in-the-meson-cloud-a-deeper-dive.mdx
@@ -1,12 +1,12 @@
 ---
 title: 'Gateway X & Its Role in the Meson Cloud: A Deeper Dive'
 date: '2023-07-27'
-tags: ['Gateway X', 'Vector Meson']
+tags: ['Gateway X']
 draft: false
 summary: Establish a Nasdaq-like platform for bandwidth infrastructure - the Meson Exchange. The Vector Plan aligns with Meson Network's objective of transitioning from a closed, manual contract-driven market to one governed by the protocol through its contributors and participants.
 images: ['/static/images/gateway-x-its-role-in-the-meson-cloud-a-deeper-dive/meson-cloud-01.webp']
 layout: PostLayout
-authors: ['Meson Network']
+authors: ['meson-network']
 departments: 'Meson Network'
 ---
 
@@ -16,7 +16,7 @@ By virtue of design, Gateway X has become a game-changer and is helping pave the
 
 For our users and community to better understand Gateway X and its role within the Meson Cloud, we’re going to explain it from a broader lens and dive deeper into exactly what it is, the use cases, and its benefits.
 
-If you’re already familiar with Gateway X and want to get started, head over to the main dashboard: https://dashboard.meson.network/labs/gatewayx 
+If you’re already familiar with Gateway X and want to get started, head over to the main dashboard: https://dashboard.meson.network/labs/gatewayx
 
 # What is Gateway X?
 
@@ -24,7 +24,7 @@ So what exactly is Gateway X? Simply put, it’s a gateway service within the Me
 
 More specifically, Gateway X allows users to access data from Web3 storage systems where they can run their own nodes while easily and smoothly accessing data from specified URLs. Furthermore, retrieval speed is much quicker, local storage devices can be directly connected to the network, and storage costs are extremely low, making it a fantastic all-in-one solution.
 
-While IPFS has many benefits, including further decentralizing file hosting and storage and opening the door to global participants, these protocols have become overloaded with demand from users trying to upload content to the same place. 
+While IPFS has many benefits, including further decentralizing file hosting and storage and opening the door to global participants, these protocols have become overloaded with demand from users trying to upload content to the same place.
 
 This issue is easily solved by Gateway X, allowing anyone in the world to build their own personalized gateway, thereby taking pressure and demand off the IPFS network while creating more funnels for content/data storage and distribution.
 
@@ -54,10 +54,10 @@ A few days later, he comes across Meson Network and begins using Gateway X as an
 
 Not only is his content uploading faster and more efficiently, but it’s also more secure within the Meson Cloud and Gateway X infrastructure. As an added benefit, he starts distributing his video content across the Web3 space without any restrictions or limitations.
 
-The user journey John’s been through is a simple example of what users can experience by using Meson Network’s Gateway X… and it’s only going to get better. 
+The user journey John’s been through is a simple example of what users can experience by using Meson Network’s Gateway X… and it’s only going to get better.
 
 # The Future is Here: Your Gateway to the World
 
-Meson Network has big plans to improve and continue to build out the core infrastructure for Gateway X in 2023 and beyond. 
+Meson Network has big plans to improve and continue to build out the core infrastructure for Gateway X in 2023 and beyond.
 
 We’ll continue to share updates about our progress and what else is to come for Gateway X and the future of our platform - stay tuned!
